@@ -1712,7 +1712,8 @@ public class MetaDataRegressionTest extends BaseTestCase {
             sb.append("field44 MULTIPOINT, ");
             sb.append("field45 MULTILINESTRING, ");
             sb.append("field46 MULTIPOLYGON, ");
-            sb.append("field47 GEOMETRYCOLLECTION ");
+            sb.append("field47 GEOMETRYCOLLECTION, ");
+            sb.append("field48 GEOMCOLLECTION ");
 
             sb.append(")");
             createTable("t_testBug23304", sb.toString());
